--- a/waybar/waybar.jsonc
+++ b/waybar/waybar.jsonc
@@ -9,7 +9,7 @@
     "margin-left": 8,
 
     "modules-left": [
-        "sway/workspaces"
+        "hyprland/workspaces"
     ],
 
     "modules-center": [
@@ -27,10 +27,20 @@
         "pulseaudio"
     ],
 
-    "sway/workspaces": {
-        "disable-scroll": true,
-        "all-outputs": true,
-        "tooltip": false
+    "hyprland/workspaces": {
+	"format": "{icon}",
+	"format-icons": {
+		"active": "",
+		"default": "",
+		"empty": ""
+	},
+	"persistent-workspaces": {
+    		"*": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+	},
+	"active-only": false,
+	"all-outputs": true,
+	"on-scroll-up": "hyprctl dispatch workspace e+1",
+	"on-scroll-down": "hyprctl dispatch workspace e-1"
     },
 
     "tray": {
